--- a/hoteles-en-bogota.html
+++ b/hoteles-en-bogota.html
@@ -147,16 +147,16 @@
                         <div class="feature-img">
                             <div class="row">
                                 <div class="col-6">
-                                    <img src="img/f1.jpg" alt="playas de cartagena">
+                                    <img src="img/f1.jpg" alt="playas de cartagena" loading="lazy">
                                 </div>
                                 <div class="col-6">
-                                    <img src="img/f2.jpg" alt="mejores lugares en cartagena">
+                                    <img src="img/f2.jpg" alt="mejores lugares en cartagena" loading="lazy">
                                 </div>
                                 <div class="col-6">
-                                    <img src="img/f3.jpg" alt="hostales en cartagena de indias">
+                                    <img src="img/f3.jpg" alt="hostales en cartagena de indias" loading="lazy">
                                 </div>
                                 <div class="col-6">
-                                    <img src="img/f4.jpg" alt="islas en cartagena">
+                                    <img src="img/f4.jpg" alt="islas en cartagena" loading="lazy">
                                 </div>
                             </div>
                         </div>
@@ -247,7 +247,7 @@
                 habitación privada (por noche).</p>
             <div class="carrusel_items">
                 <div class="items-hotels">
-                    <img class="img-hotel" src="../tours/img/m1.jpg" alt="">
+                    <img class="img-hotel" src="../tours/img/m1.jpg" alt="" loading="lazy">
                     <div class="item-hotel-info">
                         <h3>Casa Sweety</h3>
                         <span>7,9</span>
@@ -255,7 +255,7 @@
                     </div>
                 </div>
                 <div class="items-hotels">
-                    <img class="img-hotel" src="../tours/img/m1.jpg" alt="">
+                    <img class="img-hotel" src="../tours/img/m1.jpg" alt="" loading="lazy">
                     <div class="item-hotel-info">
                         <h3>Hilton</h3>
                         <span>7,9</span>
@@ -263,7 +263,7 @@
                     </div>
                 </div>
                 <div class="items-hotels">
-                    <img class="img-hotel" src="../tours/img/m1.jpg" alt="">
+                    <img class="img-hotel" src="../tours/img/m1.jpg" alt="" loading="lazy">
                     <div class="item-hotel-info">
                         <h3>Hyatt</h3>
                         <span>7,9</span>
@@ -434,7 +434,7 @@
                             <div class="col-lg-7 col-md-12">
                                 <div class="menu-item">
                                     <div class="menu-img">
-                                        <img src="img/select.jpg" alt="Hotel Habitel Select">
+                                        <img src="img/select.jpg" alt="Hotel Habitel Select" loading="lazy">
                                     </div>
                                     <div class="menu-text">
                                         <h3><span>Hotel Habitel Select </span> <strong>$251.520</strong></h3>
@@ -446,7 +446,7 @@
                                 </div>
                                 <div class="menu-item">
                                     <div class="menu-img">
-                                        <img src="img/garden.jpg" alt="Hilton Garden Inn Bogota Airport">
+                                        <img src="img/garden.jpg" alt="Hilton Garden Inn Bogota Airport" loading="lazy">
                                     </div>
                                     <div class="menu-text">
                                         <h3><span>Hilton Garden Inn Bogota Airport </span> <strong>$206.100</strong>
@@ -470,7 +470,7 @@
                                 </div>
                                 <div class="menu-item">
                                     <div class="menu-img">
-                                        <img src="img/luxury.jpg" alt="Madisson Inn Hotel & Luxury Suites">
+                                        <img src="img/luxury.jpg" alt="Madisson Inn Hotel & Luxury Suites" loading="lazy">
                                     </div>
                                     <div class="menu-text">
                                         <h3><span>Madisson Inn Hotel & Luxury Suites </span> <strong>$178.020</strong>
@@ -481,7 +481,7 @@
                                 </div>
                                 <div class="menu-item">
                                     <div class="menu-img">
-                                        <img src="img/artilleria.jpg" alt="Hotel Boutique La Artilleria">
+                                        <img src="img/artilleria.jpg" alt="Hotel Boutique La Artilleria" loading="lazy">
                                     </div>
                                     <div class="menu-text">
                                         <h3><span>Hotel Boutique La Artilleria</span> <strong>$198.000</strong></h3>
@@ -504,7 +504,7 @@
                             <div class="col-lg-7 col-md-12">
                                 <div class="menu-item">
                                     <div class="menu-img">
-                                        <img src="img/media (1).jpg" alt="Media Luna Hostel Cartagena">
+                                        <img src="img/media (1).jpg" alt="Media Luna Hostel Cartagena" loading="lazy">
                                     </div>
                                     <div class="menu-text">
                                         <h3><span>Media Luna Hostel Cartagena</span> <strong>$172.000</strong></h3>
@@ -515,7 +515,7 @@
                                 </div>
                                 <div class="menu-item">
                                     <div class="menu-img">
-                                        <img src="img/park1.jpg" alt="Hotel Boutique High Park">
+                                        <img src="img/park1.jpg" alt="Hotel Boutique High Park" loading="lazy">
                                     </div>
                                     <div class="menu-text">
                                         <h3><span>Hotel Boutique High Park</span> <strong>$102.600</strong></h3>
@@ -545,7 +545,7 @@
                                 </div>
                                 <div class="menu-item">
                                     <div class="menu-img">
-                                        <img src="img/artilleria.jpg" alt="Hotel Boutique La Artilleria">
+                                        <img src="img/artilleria.jpg" alt="Hotel Boutique La Artilleria" loading="lazy">
                                     </div>
                                     <div class="menu-text">
                                         <h3><span>Hotel Boutique La Artilleria</span> <strong>$198.000</strong></h3>
