--- a/hoteles-en-cartagena-de-indias.html
+++ b/hoteles-en-cartagena-de-indias.html
@@ -113,19 +113,6 @@
                         </div>
                     </div>
                 </div>
-                <!--<ins class="bookingaff" data-aid="2233299" data-target_aid="2233299" data-prod="nsb" data-width="100%"
-                    data-height="auto">
-                    <a href="//www.booking.com?aid=2233299">Asociado con Booking.com</a>
-                </ins>
-                <script type="text/javascript">
-                    (function (d, sc, u) {
-                        var s = d.createElement(sc), p = d.getElementsByTagName(sc)[0];
-                        s.type = 'text/javascript';
-                        s.async = true;
-                        s.src = u + '?v=' + (+new Date());
-                        p.parentNode.insertBefore(s, p);
-                    })(document, 'script', '//cf.bstatic.com/static/affiliate_base/js/flexiproduct.js');
-                </script>-->
             </div>
         </div>
     </div>
@@ -145,16 +132,16 @@
                         <div class="feature-img">
                             <div class="row">
                                 <div class="col-6">
-                                    <img src="img/f1.jpg" alt="playas de cartagena">
+                                    <img src="img/f1.jpg" alt="playas de cartagena" loading="lazy">
                                 </div>
                                 <div class="col-6">
-                                    <img src="img/f2.jpg" alt="mejores lugares en cartagena">
+                                    <img src="img/f2.jpg" alt="mejores lugares en cartagena" loading="lazy">
                                 </div>
                                 <div class="col-6">
-                                    <img src="img/f3.jpg" alt="hostales en cartagena de indias">
+                                    <img src="img/f3.jpg" alt="hostales en cartagena de indias" loading="lazy">
                                 </div>
                                 <div class="col-6">
-                                    <img src="img/f4.jpg" alt="islas en cartagena">
+                                    <img src="img/f4.jpg" alt="islas en cartagena" loading="lazy">
                                 </div>
                             </div>
                         </div>
@@ -245,7 +232,7 @@
                 habitación privada (por noche).</p>
             <div class="carrusel_items">
                 <div class="items-hotels">
-                    <img class="img-hotel" src="../tours/img/m1.jpg" alt="">
+                    <img class="img-hotel" src="../tours/img/m1.jpg" alt="" loading="lazy">
                     <div class="item-hotel-info">
                         <h3>Casa Sweety</h3>
                         <span>7,9</span>
@@ -253,7 +240,7 @@
                     </div>
                 </div>
                 <div class="items-hotels">
-                    <img class="img-hotel" src="../tours/img/m1.jpg" alt="">
+                    <img class="img-hotel" src="../tours/img/m1.jpg" alt="" loading="lazy">
                     <div class="item-hotel-info">
                         <h3>Hilton</h3>
                         <span>7,9</span>
@@ -261,7 +248,7 @@
                     </div>
                 </div>
                 <div class="items-hotels">
-                    <img class="img-hotel" src="../tours/img/m1.jpg" alt="">
+                    <img class="img-hotel" src="../tours/img/m1.jpg" alt="" loading="lazy">
                     <div class="item-hotel-info">
                         <h3>Hyatt</h3>
                         <span>7,9</span>
@@ -289,7 +276,7 @@
                                 <div class="container-item">
                                     <a href="/">
                                         <picture>
-                                            <img src="../tours/img/tours1.jpg" alt="">
+                                            <img src="../tours/img/tours1.jpg" alt="" loading="lazy">
                                         </picture>
                                         <div class="info">
                                             <h4>Tours recorrido por la ciudad de Cartagena</h4>
@@ -307,7 +294,7 @@
                                 <div class="container-item">
                                     <a href="/">
                                         <picture>
-                                            <img src="../tours/img/tours1.jpg" alt="">
+                                            <img src="../tours/img/tours1.jpg" alt="" loading="lazy">
                                         </picture>
                                         <div class="info">
                                             <h4>Tours recorrido por la ciudad de Cartagena</h4>
@@ -325,7 +312,7 @@
                                 <div class="container-item">
                                     <a href="/">
                                         <picture>
-                                            <img src="../tours/img/tours1.jpg" alt="">
+                                            <img src="../tours/img/tours1.jpg" alt="" loading="lazy">
                                         </picture>
                                         <div class="info">
                                             <h4>Tours recorrido por la ciudad de Cartagena</h4>
@@ -343,7 +330,7 @@
                                 <div class="container-item">
                                     <a href="/">
                                         <picture>
-                                            <img src="../tours/img/tours1.jpg" alt="">
+                                            <img src="../tours/img/tours1.jpg" alt="" loading="lazy">
                                         </picture>
                                         <div class="info">
                                             <h4>Tours recorrido por la ciudad de Cartagena</h4>
@@ -361,7 +348,7 @@
                                 <div class="container-item">
                                     <a href="/">
                                         <picture>
-                                            <img src="../tours/img/tours1.jpg" alt="">
+                                            <img src="../tours/img/tours1.jpg" alt="" loading="lazy">
                                         </picture>
                                         <div class="info">
                                             <h4>Tours recorrido por la ciudad de Cartagena</h4>
@@ -379,7 +366,7 @@
                                 <div class="container-item">
                                     <a href="/">
                                         <picture>
-                                            <img src="../tours/img/tours1.jpg" alt="">
+                                            <img src="../tours/img/tours1.jpg" alt="" loading="lazy">
                                         </picture>
                                         <div class="info">
                                             <h4>Tours recorrido por la ciudad de Cartagena</h4>
@@ -414,7 +401,7 @@
                                     <div class="container-item">
                                         <a href="/">
                                             <picture>
-                                                <img src="../tours/img/tours1.jpg" alt="">
+                                                <img src="../tours/img/tours1.jpg" alt="" loading="lazy">
                                             </picture>
                                             <div class="info">
                                                 <h4>Tours recorrido por la ciudad de Cartagena</h4>
@@ -432,7 +419,7 @@
                                     <div class="container-item">
                                         <a href="/">
                                             <picture>
-                                                <img src="../tours/img/tours1.jpg" alt="">
+                                                <img src="../tours/img/tours1.jpg" alt="" loading="lazy">
                                             </picture>
                                             <div class="info">
                                                 <h4>Tours recorrido por la ciudad de Cartagena</h4>
@@ -450,7 +437,7 @@
                                     <div class="container-item">
                                         <a href="/">
                                             <picture>
-                                                <img src="../tours/img/tours1.jpg" alt="">
+                                                <img src="../tours/img/tours1.jpg" alt="" loading="lazy">
                                             </picture>
                                             <div class="info">
                                                 <h4>Tours recorrido por la ciudad de Cartagena</h4>
@@ -468,7 +455,7 @@
                                     <div class="container-item">
                                         <a href="/">
                                             <picture>
-                                                <img src="../tours/img/tours1.jpg" alt="">
+                                                <img src="../tours/img/tours1.jpg" alt="" loading="lazy">
                                             </picture>
                                             <div class="info">
                                                 <h4>Tours recorrido por la ciudad de Cartagena</h4>
@@ -486,7 +473,7 @@
                                     <div class="container-item">
                                         <a href="/">
                                             <picture>
-                                                <img src="../tours/img/tours1.jpg" alt="">
+                                                <img src="../tours/img/tours1.jpg" alt="" loading="lazy">
                                             </picture>
                                             <div class="info">
                                                 <h4>Tours recorrido por la ciudad de Cartagena</h4>
@@ -504,7 +491,7 @@
                                     <div class="container-item">
                                         <a href="/">
                                             <picture>
-                                                <img src="../tours/img/tours1.jpg" alt="">
+                                                <img src="../tours/img/tours1.jpg" alt="" loading="lazy">
                                             </picture>
                                             <div class="info">
                                                 <h4>Tours recorrido por la ciudad de Cartagena</h4>
@@ -544,7 +531,7 @@
                 <h3 class="sub_title text-left">¿Qué alojamientos quedan <strong>cerca de las playas de Cartagena</strong> de Indias?</h3>
                 <h4 class="h4">La ciudad amurallada, la mejor zona para hospedarse en Cartagena de Indias</h4>
                 <div id="blog-img" class="blog-img">
-                    <img class="centro" src="img/centro.jpg" alt="ciudad amurallada Cartagena">
+                    <img class="centro" src="img/centro.jpg" alt="ciudad amurallada Cartagena" loading="lazy">
                 </div>
                 <p class="parrafo">La hermosura que desborda este barrio llamado <strong>Centro Histórico</strong> contiene las historias de esta bella ciudad; las calles de este barrio demuestra la belleza cultural que demuestra la gente que vive en esta ciudad.</p>
                 <p class="parrafo">Dentro de la ciudad amurallada hay variedad de actividades de las cuales puedes hacer en tu estadía en Cartagena de Indias.</p>
@@ -575,7 +562,7 @@
                             <div class="col-lg-7 col-md-12">
                                 <div class="menu-item">
                                     <div class="menu-img">
-                                        <img src="img/viajero.jpg" alt="el viajero hotel">
+                                        <img src="img/viajero.jpg" alt="el viajero hotel" loading="lazy">
                                     </div>
                                     <div class="menu-text">
                                         <h3><span>Hotel El Viajero Centro</span> <strong>$251.520</strong></h3>
@@ -586,7 +573,7 @@
                                 </div>
                                 <div class="menu-item">
                                     <div class="menu-img">
-                                        <img src="img/1850.jpg" alt="Hotel Ayenda Casa Cano 1805">
+                                        <img src="img/1850.jpg" alt="Hotel Ayenda Casa Cano 1805" loading="lazy">
                                     </div>
                                     <div class="menu-text">
                                         <h3><span>Hotel Ayenda Casa Cano 1805</span> <strong>$134.500</strong></h3>
@@ -597,7 +584,7 @@
                                 </div>
                                 <div class="menu-item">
                                     <div class="menu-img">
-                                        <img src="img/suite.jpg" alt="Ganem Suites Cartagena">
+                                        <img src="img/suite.jpg" alt="Ganem Suites Cartagena" loading="lazy">
                                     </div>
                                     <div class="menu-text">
                                         <h3><span>Ganem Suites Cartagena</span> <strong>$213.320</strong></h3>
@@ -608,7 +595,7 @@
                                 </div>
                                 <div class="menu-item">
                                     <div class="menu-img">
-                                        <img src="img/cecilia.jpg" alt="Hotel Santa Cecilia B&B">
+                                        <img src="img/cecilia.jpg" alt="Hotel Santa Cecilia B&B" loading="lazy">
                                     </div>
                                     <div class="menu-text">
                                         <h3><span>Hotel Santa Cecilia B&B</span> <strong>$264.960</strong></h3>
@@ -618,7 +605,7 @@
                                 </div>
                                 <div class="menu-item">
                                     <div class="menu-img">
-                                        <img src="img/artilleria.jpg" alt="Hotel Boutique La Artilleria">
+                                        <img src="img/artilleria.jpg" alt="Hotel Boutique La Artilleria" loading="lazy">
                                     </div>
                                     <div class="menu-text">
                                         <h3><span>Hotel Boutique La Artilleria</span> <strong>$198.000</strong></h3>
@@ -641,7 +628,7 @@
                             <div class="col-lg-7 col-md-12">
                                 <div class="menu-item">
                                     <div class="menu-img">
-                                        <img src="img/media (1).jpg" alt="Media Luna Hostel Cartagena">
+                                        <img src="img/media (1).jpg" alt="Media Luna Hostel Cartagena" loading="lazy">
                                     </div>
                                     <div class="menu-text">
                                         <h3><span>Media Luna Hostel Cartagena</span> <strong>$172.000</strong></h3>
@@ -652,7 +639,7 @@
                                 </div>
                                 <div class="menu-item">
                                     <div class="menu-img">
-                                        <img src="img/park1.jpg" alt="Hotel Boutique High Park">
+                                        <img src="img/park1.jpg" alt="Hotel Boutique High Park" loading="lazy">
                                     </div>
                                     <div class="menu-text">
                                         <h3><span>Hotel Boutique High Park</span> <strong>$102.600</strong></h3>
@@ -662,7 +649,7 @@
                                 </div>
                                 <div class="menu-item">
                                     <div class="menu-img">
-                                        <img src="img/1811.jpg" alt="Hostal 1811">
+                                        <img src="img/1811.jpg" alt="Hostal 1811" loading="lazy">
                                     </div>
                                     <div class="menu-text">
                                         <h3><span>Hostal 1811</span> <strong>$99.000</strong></h3>
@@ -672,7 +659,7 @@
                                 </div>
                                 <div class="menu-item">
                                     <div class="menu-img">
-                                        <img src="img/sanjacinto.jpg" alt="SAN JACINTO HOSTEL">
+                                        <img src="img/sanjacinto.jpg" alt="SAN JACINTO HOSTEL" loading="lazy">
                                     </div>
                                     <div class="menu-text">
                                         <h3><span>SAN JACINTO HOSTEL</span> <strong>$76.000</strong></h3>
@@ -682,7 +669,7 @@
                                 </div>
                                 <div class="menu-item">
                                     <div class="menu-img">
-                                        <img src="img/artilleria.jpg" alt="Hotel Boutique La Artilleria">
+                                        <img src="img/artilleria.jpg" alt="Hotel Boutique La Artilleria" loading="lazy">
                                     </div>
                                     <div class="menu-text">
                                         <h3><span>Hotel Boutique La Artilleria</span> <strong>$198.000</strong></h3>
