--- a/hoteles-en-medellin.html
+++ b/hoteles-en-medellin.html
@@ -129,16 +129,16 @@
                         <div class="feature-img">
                             <div class="row">
                                 <div class="col-6">
-                                    <img src="img/f1.jpg" alt="playas de cartagena">
+                                    <img src="img/f1.jpg" alt="playas de cartagena" loading="lazy">
                                 </div>
                                 <div class="col-6">
-                                    <img src="img/f2.jpg" alt="mejores lugares en cartagena">
+                                    <img src="img/f2.jpg" alt="mejores lugares en cartagena" loading="lazy">
                                 </div>
                                 <div class="col-6">
-                                    <img src="img/f3.jpg" alt="hostales en cartagena de indias">
+                                    <img src="img/f3.jpg" alt="hostales en cartagena de indias" loading="lazy">
                                 </div>
                                 <div class="col-6">
-                                    <img src="img/f4.jpg" alt="islas en cartagena">
+                                    <img src="img/f4.jpg" alt="islas en cartagena" loading="lazy">
                                 </div>
                             </div>
                         </div>
@@ -229,7 +229,7 @@
                 habitación privada (por noche).</p>
             <div class="carrusel_items">
                 <div class="items-hotels">
-                    <img class="img-hotel" src="../tours/img/m1.jpg" alt="">
+                    <img class="img-hotel" src="../tours/img/m1.jpg" alt="" loading="lazy">
                     <div class="item-hotel-info">
                         <h3>Casa Sweety</h3>
                         <span>7,9</span>
@@ -237,7 +237,7 @@
                     </div>
                 </div>
                 <div class="items-hotels">
-                    <img class="img-hotel" src="../tours/img/m1.jpg" alt="">
+                    <img class="img-hotel" src="../tours/img/m1.jpg" alt="" loading="lazy">
                     <div class="item-hotel-info">
                         <h3>Hilton</h3>
                         <span>7,9</span>
@@ -245,7 +245,7 @@
                     </div>
                 </div>
                 <div class="items-hotels">
-                    <img class="img-hotel" src="../tours/img/m1.jpg" alt="">
+                    <img class="img-hotel" src="../tours/img/m1.jpg" alt="" loading="lazy">
                     <div class="item-hotel-info">
                         <h3>Hyatt</h3>
                         <span>7,9</span>
@@ -272,7 +272,7 @@
                                 <div class="container-item">
                                     <a href="/">
                                         <picture>
-                                            <img src="../tours/img/tours1.jpg" alt="">
+                                            <img src="../tours/img/tours1.jpg" alt="" loading="lazy">
                                         </picture>
                                         <div class="info">
                                             <h4>Tours recorrido por la ciudad de Medellín</h4>
@@ -289,7 +289,7 @@
                                 <div class="container-item">
                                     <a href="/">
                                         <picture>
-                                            <img src="../tours/img/tours1.jpg" alt="">
+                                            <img src="../tours/img/tours1.jpg" alt="" loading="lazy">
                                         </picture>
                                         <div class="info">
                                             <h4>Tours recorrido por la ciudad de Bogota</h4>
@@ -306,7 +306,7 @@
                                 <div class="container-item">
                                     <a href="/">
                                         <picture>
-                                            <img src="../tours/img/tours1.jpg" alt="">
+                                            <img src="../tours/img/tours1.jpg" alt="" loading="lazy">
                                         </picture>
                                         <div class="info">
                                             <h4>Tours recorrido por la ciudad de Bogota</h4>
@@ -323,7 +323,7 @@
                                 <div class="container-item">
                                     <a href="/">
                                         <picture>
-                                            <img src="../tours/img/tours1.jpg" alt="">
+                                            <img src="../tours/img/tours1.jpg" alt="" loading="lazy">
                                         </picture>
                                         <div class="info">
                                             <h4>Tours recorrido por la ciudad de Bogota</h4>
@@ -340,7 +340,7 @@
                                 <div class="container-item">
                                     <a href="/">
                                         <picture>
-                                            <img src="../tours/img/tours1.jpg" alt="">
+                                            <img src="../tours/img/tours1.jpg" alt="" loading="lazy">
                                         </picture>
                                         <div class="info">
                                             <h4>Tours recorrido por la ciudad de Bogota</h4>
@@ -357,7 +357,7 @@
                                 <div class="container-item">
                                     <a href="/">
                                         <picture>
-                                            <img src="../tours/img/tours1.jpg" alt="">
+                                            <img src="../tours/img/tours1.jpg" alt="" loading="lazy">
                                         </picture>
                                         <div class="info">
                                             <h4>Tours recorrido por la ciudad de Bogota</h4>
@@ -406,7 +406,7 @@
                             <div class="col-lg-7 col-md-12">
                                 <div class="menu-item">
                                     <div class="menu-img">
-                                        <img src="img/select.jpg" alt="Hotel Habitel Select">
+                                        <img src="img/select.jpg" alt="Hotel Habitel Select" loading="lazy">
                                     </div>
                                     <div class="menu-text">
                                         <h3><span>Hotel Habitel Select </span> <strong>$251.520</strong></h3>
@@ -417,7 +417,7 @@
                                 </div>
                                 <div class="menu-item">
                                     <div class="menu-img">
-                                        <img src="img/garden.jpg" alt="Hilton Garden Inn Bogota Airport">
+                                        <img src="img/garden.jpg" alt="Hilton Garden Inn Bogota Airport" loading="lazy">
                                     </div>
                                     <div class="menu-text">
                                         <h3><span>Hilton Garden Inn Bogota Airport </span> <strong>$206.100</strong></h3>
@@ -428,7 +428,7 @@
                                 </div>
                                 <div class="menu-item">
                                     <div class="menu-img">
-                                        <img src="img/santa.jpg" alt="Hotel Santa Barbara Real">
+                                        <img src="img/santa.jpg" alt="Hotel Santa Barbara Real" loading="lazy">
                                     </div>
                                     <div class="menu-text">
                                         <h3><span>Hotel Santa Barbara Real </span> <strong>$137.700</strong></h3>
@@ -438,7 +438,7 @@
                                 </div>
                                 <div class="menu-item">
                                     <div class="menu-img">
-                                        <img src="img/luxury.jpg" alt="Madisson Inn Hotel & Luxury Suites">
+                                        <img src="img/luxury.jpg" alt="Madisson Inn Hotel & Luxury Suites" loading="lazy">
                                     </div>
                                     <div class="menu-text">
                                         <h3><span>Madisson Inn Hotel & Luxury Suites </span> <strong>$178.020</strong></h3>
@@ -447,7 +447,7 @@
                                 </div>
                                 <div class="menu-item">
                                     <div class="menu-img">
-                                        <img src="img/artilleria.jpg" alt="Hotel Boutique La Artilleria">
+                                        <img src="img/artilleria.jpg" alt="Hotel Boutique La Artilleria" loading="lazy">
                                     </div>
                                     <div class="menu-text">
                                         <h3><span>Hotel Boutique La Artilleria</span> <strong>$198.000</strong></h3>
@@ -470,7 +470,7 @@
                             <div class="col-lg-7 col-md-12">
                                 <div class="menu-item">
                                     <div class="menu-img">
-                                        <img src="img/media (1).jpg" alt="Media Luna Hostel Cartagena">
+                                        <img src="img/media (1).jpg" alt="Media Luna Hostel Cartagena" loading="lazy">
                                     </div>
                                     <div class="menu-text">
                                         <h3><span>Media Luna Hostel Cartagena</span> <strong>$172.000</strong></h3>
@@ -481,7 +481,7 @@
                                 </div>
                                 <div class="menu-item">
                                     <div class="menu-img">
-                                        <img src="img/park1.jpg" alt="Hotel Boutique High Park">
+                                        <img src="img/park1.jpg" alt="Hotel Boutique High Park" loading="lazy">
                                     </div>
                                     <div class="menu-text">
                                         <h3><span>Hotel Boutique High Park</span> <strong>$102.600</strong></h3>
@@ -501,7 +501,7 @@
                                 </div>
                                 <div class="menu-item">
                                     <div class="menu-img">
-                                        <img src="img/sanjacinto.jpg" alt="SAN JACINTO HOSTEL">
+                                        <img src="img/sanjacinto.jpg" alt="SAN JACINTO HOSTEL" loading="lazy">
                                     </div>
                                     <div class="menu-text">
                                         <h3><span>SAN JACINTO HOSTEL</span> <strong>$76.000</strong></h3>
@@ -511,7 +511,7 @@
                                 </div>
                                 <div class="menu-item">
                                     <div class="menu-img">
-                                        <img src="img/artilleria.jpg" alt="Hotel Boutique La Artilleria">
+                                        <img src="img/artilleria.jpg" alt="Hotel Boutique La Artilleria" loading="lazy">
                                     </div>
                                     <div class="menu-text">
                                         <h3><span>Hotel Boutique La Artilleria</span> <strong>$198.000</strong></h3>
@@ -583,8 +583,8 @@
         </div>
         <div class="copyright">
             <div class="container">
-                <p>Copyright &copy; <a href="#">Your Site Name</a>, All Right Reserved.</p>
-                <p>Designed By <a href="https://htmlcodex.com">HTML Codex</a></p>
+                <p>Copyright &copy; <a href="#">TourOpen</a>, Todos los derechos reservados.</p>
+                <p>Diseñado por <a href="https://santydev.netlify.app/">SantyDev.com</a></p>
             </div>
         </div>
     </div>
