--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
     </div>
     <!-- Nav Bar End -->
-
+    
     <!-- Carousel Start -->
     <div class="carousel">
         <div class="container-fluid">
@@ -79,11 +79,8 @@
                         <p>
                             TourOpen te ayudará en todo lo que necesites en Cartagena.
                         </p>
-                        <p>
-                            Visita las mejores Islas del Caribe.
-                        </p>
                         <div class="carousel-btn">
-                            <a class="btn custom-btn" href="shop.html">Ver Tures</a>
+                            <a class="btn custom-btn" href="shop.html">Ver Tienda</a>
                             <a class="btn custom-btn" href="#reservar">Reservar ya!</a>
                         </div>
                     </div>
@@ -95,10 +92,10 @@
                     <div class="carousel-text">
                         <h2 class="h2">Adquiere <span>Descuentos</span> en TourOpen</h2>
                         <p>
-                            Qué mejor que disfrutar con precios accesibles.
+                            Qué mejor que disfrutar con precios accesibles en nuestra tienda.
                         </p>
                         <div class="carousel-btn">
-                            <a class="btn custom-btn" href="shop.html">Ver Tures</a>
+                            <a class="btn custom-btn" href="shop.html">Ver Tienda</a>
                             <a class="btn custom-btn" href="#reservar">Reservar ya!</a>
                         </div>
                     </div>
@@ -113,7 +110,7 @@
                             Adquiere tures a Islas con transporte, comida y cortesias.
                         </p>
                         <div class="carousel-btn">
-                            <a class="btn custom-btn" href="shop.html">Ver Tures</a>
+                            <a class="btn custom-btn" href="shop.html">Ver Tienda</a>
                             <a class="btn custom-btn" href="#reservar">Reservar ya!</a>
                         </div>
                     </div>
@@ -236,16 +233,16 @@
                         <div class="feature-img">
                             <div class="row">
                                 <div class="col-6">
-                                    <img src="img/caracteristica-1.png" alt="servicio 27/7 de tures">
+                                    <img src="img/caracteristica-1.png" alt="servicio 27/7 de tures" loading="lazy">
                                 </div>
                                 <div class="col-6">
-                                    <img src="img/caracteristica-2.png" alt="recomendaciones para los mejores tures">
+                                    <img src="img/caracteristica-2.png" alt="recomendaciones para los mejores tures" loading="lazy">
                                 </div>
                                 <div class="col-6">
-                                    <img src="img/caracteristica-3.png" alt="planeacion de tures">
+                                    <img src="img/caracteristica-3.png" alt="planeacion de tures" loading="lazy">
                                 </div>
                                 <div class="col-6">
-                                    <img src="img/caracteristica-4.png" alt="consergeria de tures">
+                                    <img src="img/caracteristica-4.png" alt="consergeria de tures" loading="lazy">
                                 </div>
                             </div>
                         </div>
@@ -330,7 +327,7 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="team-item">
                             <div class="team-img">
-                                <img src="img/city_tour_en_cartagena.jpg" alt="city tour en cartagena en 2022">
+                                <img src="img/city_tour_en_cartagena.jpg" alt="city tour en cartagena en 2022" loading="lazy">
                                 <div class="team-social">
                                     <a href=""><i class="fi fi-sr-shopping-cart"></i></a>
                                     <a href=""><i class="fi fi-br-info"></i></a>
@@ -345,7 +342,7 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="team-item">
                             <div class="team-img">
-                                <img src="img/chivas_rumberas_en_cartagena.jpg" alt="chivas rumberas en Cartagena 2022">
+                                <img src="img/chivas_rumberas_en_cartagena.jpg" alt="chivas rumberas en Cartagena 2022" loading="lazy">
                                 <div class="team-social">
                                     <a href=""><i class="fi fi-sr-shopping-cart"></i></a>
                                     <a href=""><i class="fi fi-br-info"></i></a>
@@ -376,7 +373,7 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="team-item">
                             <div class="team-img">
-                                <img src="img/isla_del_encanto_2022.jpg" alt="isla del encanto en 2022">
+                                <img src="img/isla_del_encanto_2022.jpg" alt="isla del encanto en 2022" loading="lazy">
                                 <div class="team-social">
                                     <a href=""><i class="fi fi-sr-shopping-cart"></i></a>
                                     <a href=""><i class="fi fi-br-info"></i></a>
@@ -429,7 +426,7 @@
                                 </div>
                                 <div class="menu-item">
                                     <div class="menu-img">
-                                        <img src="img/isla_coralina_Cartagena.jpg" alt="isla coralina">
+                                        <img src="img/isla_coralina_Cartagena.jpg" alt="isla coralina" loading="lazy">
                                     </div>
                                     <div class="menu-text">
                                         <h3><span>Coralina</span> <strong>$290.000</strong></h3>
@@ -439,7 +436,7 @@
                                 </div>
                                 <div class="menu-item">
                                     <div class="menu-img">
-                                        <img src="img/isla_bendita_beach_cartagena.jpg" alt="bendita Beach">
+                                        <img src="img/isla_bendita_beach_cartagena.jpg" alt="bendita Beach" loading="lazy">
                                     </div>
                                     <div class="menu-text">
                                         <h3><span>Bendita Beach</span> <strong>$250.000</strong></h3>
@@ -449,7 +446,7 @@
                                 </div>
                                 <div class="menu-item">
                                     <div class="menu-img">
-                                        <img src="img/isla_mucura_cartagena_2022.jpg" alt="Mucura tradicional">
+                                        <img src="img/isla_mucura_cartagena_2022.jpg" alt="Mucura tradicional" loading="lazy">
                                     </div>
                                     <div class="menu-text">
                                         <h3><span>Mucura Tradicional</span> <strong>$220.000</strong></h3>
@@ -459,7 +456,7 @@
                                 <div class="menu-item">
                                     <div class="menu-img">
                                         <img src="img/isla_mucura_en_bote_deportivo_2022.jpg"
-                                            alt="Mucura Bote Deportivo">
+                                            alt="Mucura Bote Deportivo" loading="lazy">
                                     </div>
                                     <div class="menu-text">
                                         <h3><span>Mucura Bote Deportivo</span> <strong>$250.000</strong></h3>
@@ -468,7 +465,7 @@
                                 </div>
                             </div>
                             <div class="col-lg-5 d-none d-lg-block">
-                                <img src="img/isla_coralina_Cartagena.jpg" alt="Image">
+                                <img src="img/isla_coralina_Cartagena.jpg" alt="Image" loading="lazy">
                             </div>
                         </div>
                     </div>
@@ -477,7 +474,7 @@
                             <div class="col-lg-7 col-md-12">
                                 <div class="menu-item">
                                     <div class="menu-img">
-                                        <img src="img/Isla_cholon_cartagena.jpg" alt="Isla Cholon">
+                                        <img src="img/Isla_cholon_cartagena.jpg" alt="Isla Cholon" loading="lazy">
                                     </div>
                                     <div class="menu-text">
                                         <h3><span>Isla Cholon</span> <strong>$170.000</strong></h3>
@@ -486,7 +483,7 @@
                                 </div>
                                 <div class="menu-item">
                                     <div class="menu-img">
-                                        <img src="img/isla_del_sol_cartagena_2022.jpg" alt="Isla Del Sol">
+                                        <img src="img/isla_del_sol_cartagena_2022.jpg" alt="Isla Del Sol" loading="lazy">
                                     </div>
                                     <div class="menu-text">
                                         <h3><span>Isla Del Sol</span> <strong>$240.000</strong></h3>
@@ -495,7 +492,7 @@
                                 </div>
                                 <div class="menu-item">
                                     <div class="menu-img">
-                                        <img src="img/isla_del_encanto_Cartagena.jpg" alt="Isla Del Encanto">
+                                        <img src="img/isla_del_encanto_Cartagena.jpg" alt="Isla Del Encanto" loading="lazy">
                                     </div>
                                     <div class="menu-text">
                                         <h3><span>Isla Del Encanto</span> <strong>$250.000</strong></h3>
@@ -504,7 +501,7 @@
                                 </div>
                                 <div class="menu-item">
                                     <div class="menu-img">
-                                        <img src="img/baru_y_plancton_cartagena_2022.jpg" alt="Baru y Plancton">
+                                        <img src="img/baru_y_plancton_cartagena_2022.jpg" alt="Baru y Plankton" loading="lazy">
                                     </div>
                                     <div class="menu-text">
                                         <h3><span>Baru + Plancton</span> <strong>$150.000</strong></h3>
@@ -513,7 +510,7 @@
                                 </div>
                             </div>
                             <div class="col-lg-5 d-none d-lg-block">
-                                <img src="img/isla_del_sol_cartagena_2022.jpg" alt="Image">
+                                <img src="img/isla_del_sol_cartagena_2022.jpg" alt="isla del sol" loading="lazy">
                             </div>
                         </div>
                     </div>
@@ -535,7 +532,7 @@
                     <div class="col-md-6">
                         <div class="blog-item">
                             <div class="blog-img">
-                                <img src="img/aloja.jpg" alt="10 Mejores Tures en cartagena de indias">
+                                <img src="img/aloja.jpg" alt="10 Mejores Tures en cartagena de indias" loading="lazy">
                             </div>
                             <div class="blog-content">
                                 <h2 class="blog-title">Los 10 mejores Tours en Cartagena 2022</h2>
@@ -558,7 +555,7 @@
                     <div class="col-md-6">
                         <div class="blog-item">
                             <div class="blog-img">
-                                <img src="img/medellin.jpg" alt="10 Mejores Tures en Medellín">
+                                <img src="img/medellin.jpg" alt="10 Mejores Tures en Medellín" loading="lazy">
                             </div>
                             <div class="blog-content">
                                 <h2 class="blog-title">Los 10 mejores hoteles en Medellín 2022</h2>
@@ -631,24 +628,24 @@
             <div class="row contact-form">
                 <div class="col-md-6">
                     <div id="success"></div>
-                    <form name="sentMessage" id="contactForm" novalidate="novalidate">
+                    <form name="contact" id="contactForm" novalidate="novalidate" netlify>
                         <div class="control-group">
-                            <input type="text" class="form-control" id="name" placeholder="Nombre"
+                            <input type="text" class="form-control" id="name" name="name" placeholder="Nombre"
                                 required="required" data-validation-required-message="Please enter your name" />
                             <p class="help-block text-danger"></p>
                         </div>
                         <div class="control-group">
-                            <input type="email" class="form-control" id="email" placeholder="Email"
+                            <input type="email" class="form-control" id="email" name="email" placeholder="Email"
                                 required="required" data-validation-required-message="Please enter your email" />
                             <p class="help-block text-danger"></p>
                         </div>
                         <div class="control-group">
-                            <input type="text" class="form-control" id="subject" placeholder="Asunto"
+                            <input type="text" class="form-control" id="subject" name="subject" placeholder="Asunto"
                                 required="required" data-validation-required-message="Please enter a subject" />
                             <p class="help-block text-danger"></p>
                         </div>
                         <div class="control-group">
-                            <textarea class="form-control" id="message" placeholder="Escribe aquí tu mensaje" required="required"
+                            <textarea class="form-control" id="message" name="textarea" placeholder="Escribe aquí tu mensaje" required="required"
                                 data-validation-required-message="Please enter your message"></textarea>
                             <p class="help-block text-danger"></p>
                         </div>
