--- a/los_mejores_botes_lanchas_en_cartagena_de_indias_2022.html
+++ b/los_mejores_botes_lanchas_en_cartagena_de_indias_2022.html
@@ -125,19 +125,6 @@
                         </div>
                     </div>
                 </div>
-                <!--<ins class="bookingaff" data-aid="2233299" data-target_aid="2233299" data-prod="nsb" data-width="100%"
-                    data-height="auto">
-                    <a href="//www.booking.com?aid=2233299">Asociado con Booking.com</a>
-                </ins>
-                <script type="text/javascript">
-                    (function (d, sc, u) {
-                        var s = d.createElement(sc), p = d.getElementsByTagName(sc)[0];
-                        s.type = 'text/javascript';
-                        s.async = true;
-                        s.src = u + '?v=' + (+new Date());
-                        p.parentNode.insertBefore(s, p);
-                    })(document, 'script', '//cf.bstatic.com/static/affiliate_base/js/flexiproduct.js');
-                </script>-->
             </div>
         </div>
     </div>
@@ -305,7 +292,7 @@
                                     <div class="col-lg-7 col-md-12">
                                         <div class="menu-item">
                                             <div class="menu-img">
-                                                <img src="img/islas.jpg" alt="playa blanca">
+                                                <img src="img/islas.jpg" alt="playa blanca" loading="lazy">
                                             </div>
                                             <div class="menu-text">
                                                 <h3><span>Playa Blanca</span> <strong>$280.000</strong></h3>
@@ -315,7 +302,7 @@
                                         </div>
                                         <div class="menu-item">
                                             <div class="menu-img">
-                                                <img src="img/isla_coralina_Cartagena.jpg" alt="isla coralina">
+                                                <img src="img/isla_coralina_Cartagena.jpg" alt="isla coralina" loading="lazy">
                                             </div>
                                             <div class="menu-text">
                                                 <h3><span>Coralina</span> <strong>$290.000</strong></h3>
@@ -325,7 +312,7 @@
                                         </div>
                                         <div class="menu-item">
                                             <div class="menu-img">
-                                                <img src="img/isla_bendita_beach_cartagena.jpg" alt="bendita Beach">
+                                                <img src="img/isla_bendita_beach_cartagena.jpg" alt="bendita Beach" loading="lazy">
                                             </div>
                                             <div class="menu-text">
                                                 <h3><span>Bendita Beach</span> <strong>$250.000</strong></h3>
@@ -336,7 +323,7 @@
                                         </div>
                                         <div class="menu-item">
                                             <div class="menu-img">
-                                                <img src="img/isla_mucura_cartagena_2022.jpg" alt="Mucura tradicional">
+                                                <img src="img/isla_mucura_cartagena_2022.jpg" alt="Mucura tradicional" loading="lazy">
                                             </div>
                                             <div class="menu-text">
                                                 <h3><span>Mucura Tradicional</span> <strong>$220.000</strong></h3>
@@ -346,7 +333,7 @@
                                         <div class="menu-item">
                                             <div class="menu-img">
                                                 <img src="img/isla_mucura_en_bote_deportivo_2022.jpg"
-                                                    alt="Mucura Bote Deportivo">
+                                                    alt="Mucura Bote Deportivo" loading="lazy">
                                             </div>
                                             <div class="menu-text">
                                                 <h3><span>Mucura Bote Deportivo</span> <strong>$250.000</strong></h3>
@@ -355,7 +342,7 @@
                                         </div>
                                     </div>
                                     <div class="col-lg-5 d-none d-lg-block">
-                                        <img src="img/isla_coralina_Cartagena.jpg" alt="Image">
+                                        <img src="img/isla_coralina_Cartagena.jpg" alt="Image" loading="lazy">
                                     </div>
                                 </div>
                             </div>
@@ -364,7 +351,7 @@
                                     <div class="col-lg-7 col-md-12">
                                         <div class="menu-item">
                                             <div class="menu-img">
-                                                <img src="img/Isla_cholon_cartagena.jpg" alt="Isla Cholon">
+                                                <img src="img/Isla_cholon_cartagena.jpg" alt="Isla Cholon" loading="lazy">
                                             </div>
                                             <div class="menu-text">
                                                 <h3><span>Isla Cholon</span> <strong>$170.000</strong></h3>
@@ -373,7 +360,7 @@
                                         </div>
                                         <div class="menu-item">
                                             <div class="menu-img">
-                                                <img src="img/isla_del_sol_cartagena_2022.jpg" alt="Isla Del Sol">
+                                                <img src="img/isla_del_sol_cartagena_2022.jpg" alt="Isla Del Sol" loading="lazy">
                                             </div>
                                             <div class="menu-text">
                                                 <h3><span>Isla Del Sol</span> <strong>$240.000</strong></h3>
@@ -383,7 +370,7 @@
                                         </div>
                                         <div class="menu-item">
                                             <div class="menu-img">
-                                                <img src="img/isla_del_encanto_Cartagena.jpg" alt="Isla Del Encanto">
+                                                <img src="img/isla_del_encanto_Cartagena.jpg" alt="Isla Del Encanto" loading="lazy">
                                             </div>
                                             <div class="menu-text">
                                                 <h3><span>Isla Del Encanto</span> <strong>$250.000</strong></h3>
@@ -392,7 +379,7 @@
                                         </div>
                                         <div class="menu-item">
                                             <div class="menu-img">
-                                                <img src="img/baru_y_plancton_cartagena_2022.jpg" alt="Baru y Plancton">
+                                                <img src="img/baru_y_plancton_cartagena_2022.jpg" alt="Baru y Plancton" loading="lazy">
                                             </div>
                                             <div class="menu-text">
                                                 <h3><span>Baru + Plancton</span> <strong>$150.000</strong></h3>
@@ -401,7 +388,7 @@
                                         </div>
                                     </div>
                                     <div class="col-lg-5 d-none d-lg-block">
-                                        <img src="img/isla_del_sol_cartagena_2022.jpg" alt="Image">
+                                        <img src="img/isla_del_sol_cartagena_2022.jpg" alt="Image" loading="lazy">
                                     </div>
                                 </div>
                             </div>
