--- a/las_10_mejores_excursiones_en_Cartagena_2022_Su_guía_definitiva.html
+++ b/las_10_mejores_excursiones_en_Cartagena_2022_Su_guía_definitiva.html
@@ -294,7 +294,7 @@
                                     <div class="col-lg-7 col-md-12">
                                         <div class="menu-item">
                                             <div class="menu-img">
-                                                <img src="img/islas.jpg" alt="playa blanca">
+                                                <img src="img/islas.jpg" alt="playa blanca" loading="lazy">
                                             </div>
                                             <div class="menu-text">
                                                 <h3><span>Playa Blanca</span> <strong>$280.000</strong></h3>
@@ -304,7 +304,7 @@
                                         </div>
                                         <div class="menu-item">
                                             <div class="menu-img">
-                                                <img src="img/isla_coralina_Cartagena.jpg" alt="isla coralina">
+                                                <img src="img/isla_coralina_Cartagena.jpg" alt="isla coralina" loading="lazy">
                                             </div>
                                             <div class="menu-text">
                                                 <h3><span>Coralina</span> <strong>$290.000</strong></h3>
@@ -314,7 +314,7 @@
                                         </div>
                                         <div class="menu-item">
                                             <div class="menu-img">
-                                                <img src="img/isla_bendita_beach_cartagena.jpg" alt="bendita Beach">
+                                                <img src="img/isla_bendita_beach_cartagena.jpg" alt="bendita Beach" loading="lazy">
                                             </div>
                                             <div class="menu-text">
                                                 <h3><span>Bendita Beach</span> <strong>$250.000</strong></h3>
@@ -325,7 +325,7 @@
                                         </div>
                                         <div class="menu-item">
                                             <div class="menu-img">
-                                                <img src="img/isla_mucura_cartagena_2022.jpg" alt="Mucura tradicional">
+                                                <img src="img/isla_mucura_cartagena_2022.jpg" alt="Mucura tradicional" loading="lazy">
                                             </div>
                                             <div class="menu-text">
                                                 <h3><span>Mucura Tradicional</span> <strong>$220.000</strong></h3>
@@ -353,7 +353,7 @@
                                     <div class="col-lg-7 col-md-12">
                                         <div class="menu-item">
                                             <div class="menu-img">
-                                                <img src="img/Isla_cholon_cartagena.jpg" alt="Isla Cholon">
+                                                <img src="img/Isla_cholon_cartagena.jpg" alt="Isla Cholon" loading="lazy">
                                             </div>
                                             <div class="menu-text">
                                                 <h3><span>Isla Cholon</span> <strong>$170.000</strong></h3>
@@ -362,7 +362,7 @@
                                         </div>
                                         <div class="menu-item">
                                             <div class="menu-img">
-                                                <img src="img/isla_del_sol_cartagena_2022.jpg" alt="Isla Del Sol">
+                                                <img src="img/isla_del_sol_cartagena_2022.jpg" alt="Isla Del Sol" loading="lazy">
                                             </div>
                                             <div class="menu-text">
                                                 <h3><span>Isla Del Sol</span> <strong>$240.000</strong></h3>
@@ -372,7 +372,7 @@
                                         </div>
                                         <div class="menu-item">
                                             <div class="menu-img">
-                                                <img src="img/isla_del_encanto_Cartagena.jpg" alt="Isla Del Encanto">
+                                                <img src="img/isla_del_encanto_Cartagena.jpg" alt="Isla Del Encanto" loading="lazy">
                                             </div>
                                             <div class="menu-text">
                                                 <h3><span>Isla Del Encanto</span> <strong>$250.000</strong></h3>
@@ -381,7 +381,7 @@
                                         </div>
                                         <div class="menu-item">
                                             <div class="menu-img">
-                                                <img src="img/baru_y_plancton_cartagena_2022.jpg" alt="Baru y Plancton">
+                                                <img src="img/baru_y_plancton_cartagena_2022.jpg" alt="Baru y Plancton" loading="lazy">
                                             </div>
                                             <div class="menu-text">
                                                 <h3><span>Baru + Plancton</span> <strong>$150.000</strong></h3>
@@ -390,7 +390,7 @@
                                         </div>
                                     </div>
                                     <div class="col-lg-5 d-none d-lg-block">
-                                        <img src="img/isla_del_sol_cartagena_2022.jpg" alt="Image">
+                                        <img src="img/isla_del_sol_cartagena_2022.jpg" alt="Image" loading="lazy">
                                     </div>
                                 </div>
                             </div>
